--- a/src/android/FCMPlugin.gradle
+++ b/src/android/FCMPlugin.gradle
@@ -2,10 +2,11 @@ buildscript {
 	repositories {
             jcenter()
 			mavenLocal()
+            google()
         }
     dependencies {
         classpath 'com.android.tools.build:gradle:+'
-        classpath 'com.google.gms:google-services:3.0.0'
+        classpath 'com.google.gms:google-services:4.2.0'
     }
 }
 // apply plugin: 'com.google.gms.google-services'
